# ponia

./: .gitignore  README.md  pyproject.toml
example/: demo.ipynb
src/ponia/: __init__.py  functions.py  ponia.py  prompts.py  tools.py
tests/: test_functions.py  test_ponia_integration.py  test_ponia_mtcars.py
