[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ponia"
version = "0.1.1"
description = "Query pandas DataFrames with natural language using OpenAI function calling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PABLo"}
]
dependencies = [
    "pandas>=1.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
